Updates to support broker 9.7

--- a/templates/solace-master.template
+++ b/templates/solace-master.template
@@ -8,7 +8,7 @@ Metadata:
   AWS::CloudFormation::Interface:
     ParameterGroups:
       - Label:
-          default: PubSub+ Configuration
+          default: PubSub+ Broker Configuration
         Parameters:
           - SolaceDockerImage
           - AdminPassword
@@ -27,13 +27,12 @@ Metadata:
           - KeyPairName
           - BootDiskSize
       - Label:
-          default: Event Broker Instance Configuration
+          default: Event Broker System Scaling
         Parameters:
-          - EventBrokerNodeInstanceType
+          - MaxClientConnections
+          - MaxQueueMessages
+          - WorkerNodeInstanceType
           - EventBrokerNodeStorage
-      - Label:
-          default: Monitor Instance Configuration
-        Parameters:
           - MonitorNodeInstanceType
       - Label:
           default: AWS Quick Start Configuration
@@ -54,12 +53,16 @@ Metadata:
         default: Number of Availability Zones
       BootDiskSize:
         default: Boot Disk Capacity (GiB)
-      EventBrokerNodeInstanceType:
-        default: Instance Type
+      MaxClientConnections:
+        default: Maximum Number of Client Connections
+      MaxQueueMessages:
+        default: Maximum Number of Queue Messages
+      WorkerNodeInstanceType:
+        default: Message Routing Node Instance Type
       EventBrokerNodeStorage:
         default: Persistent Storage
       MonitorNodeInstanceType:
-        default: Instance Type
+        default: Monitor Node Instance Type
       KeyPairName:
         default: Key Pair Name
       SSHAccessCIDR:
@@ -67,7 +70,7 @@ Metadata:
       RemoteAccessCIDR:
         default: Allowed External Access CIDR
       CreatePrivateSubnets:
-        default: Create production ready enviroment
+        default: Create production ready environment
       QSS3BucketName:
         default: Quick Start S3 Bucket Name
       QSS3BucketRegion:
@@ -118,15 +121,33 @@ Parameters:
     MaxValue: '128'
     MinValue: '8'
     Type: Number
-  EventBrokerNodeInstanceType:
+  MaxClientConnections:
+    AllowedValues:
+      - '100'
+      - '1000'
+      - '10000'
+      - '100000'
+      - '200000'
+    ConstraintDescription: Must be a valid value from the list.
+    Default: '100'
+    Description: 'The maximum supported number of client connections system scaling parameter'
+    Type: String
+  MaxQueueMessages:
+    AllowedValues:
+      - '100'
+      - '240'
+      - '3000'
+    ConstraintDescription: Must be a valid EC2 instance type.
+    Default: '100'
+    Description: 'The maximum number of queue messages system scaling parameter, in millions of messages'
+    Type: String
+  WorkerNodeInstanceType:
     AllowedValues:
       - t2.small
       - t2.medium
       - t2.large
       - t2.xlarge
       - t2.2xlarge
-      - m3.large
-      - m3.xlarge
       - m4.large
       - m4.xlarge
       - m4.2xlarge
@@ -137,8 +158,9 @@ Parameters:
       - m5.4xlarge
     ConstraintDescription: Must be a valid EC2 instance type.
     Default: m4.large
-    Description: 'Instance Type for PubSub+ event broker message routing nodes. Note:
-      Make sure that your region supports the selected instance type before continuing'
+    Description: 'Instance Type for PubSub+ event broker message routing nodes. Important: ensure adequate CPU and Memory resources
+      are available to support the selected system scaling parameters. For requirements check https://docs.solace.com/. 
+      Also make sure that your region supports the selected instance type before continuing.'
     Type: String
   EventBrokerNodeStorage:
     ConstraintDescription: No more than 640 GiB per device.
@@ -178,16 +200,13 @@ Parameters:
     Type: String
   MonitorNodeInstanceType:
     AllowedValues:
-      - t2.micro
       - t2.small
       - t2.medium
-      - t2.large
-      - t2.xlarge
       - m4.large
       - m5.large
     ConstraintDescription: Must be a valid EC2 instance type.
-    Default: t2.micro
-    Description: 'Instance Type for PubSub+ event broker monitoring node. Note: Make
+    Default: t2.medium
+    Description: 'Instance Type for PubSub+ event broker monitoring node. For requirements check https://docs.solace.com/. Note: Make
       sure that your region supports the selected instance type before continuing'
     Type: String
   QSS3BucketName:
@@ -278,7 +297,9 @@ Resources:
         ContainerLoggingFormat: !Ref 'ContainerLoggingFormat'
         NumberOfAZs: !Ref 'NumberOfAZs'
         BootDiskSize: !Ref 'BootDiskSize'
-        EventBrokerNodeInstanceType: !Ref 'EventBrokerNodeInstanceType'
+        MaxClientConnections: !Ref 'MaxClientConnections'
+        MaxQueueMessages: !Ref 'MaxQueueMessages'
+        WorkerNodeInstanceType: !Ref 'WorkerNodeInstanceType'
         EventBrokerNodeStorage: !Ref 'EventBrokerNodeStorage'
         MonitorNodeInstanceType: !Ref 'MonitorNodeInstanceType'
         KeyPairName: !Ref 'KeyPairName'
