--- a/templates/solace.template
+++ b/templates/solace.template
@@ -5,7 +5,7 @@ Metadata:
   AWS::CloudFormation::Interface:
     ParameterGroups:
       - Label:
-          default: Solace Configuration
+          default: PubSub+ Broker Configuration
         Parameters:
           - SolaceDockerImage
           - AdminPassword
@@ -26,13 +26,12 @@ Metadata:
           - KeyPairName
           - BootDiskSize
       - Label:
-          default: Event Broker Instance Configuration
+          default: Event Broker System Scaling
         Parameters:
-          - EventBrokerNodeInstanceType
+          - MaxClientConnections
+          - MaxQueueMessages
+          - WorkerNodeInstanceType
           - EventBrokerNodeStorage
-      - Label:
-          default: Monitor Instance Configuration
-        Parameters:
           - MonitorNodeInstanceType
       - Label:
           default: AWS Quick Start Configuration
@@ -42,23 +41,27 @@ Metadata:
           - QSS3KeyPrefix
     ParameterLabels:
       SolaceDockerImage:
-        default: Solace Docker image reference
+        default: PubSub+ Docker image reference
       AdminPassword:
-        default: Password to access Solace admin console and SEMP
+        default: Password to access PubSub+ admin console and SEMP
       ContainerLoggingFormat:
         default: Container logging format
+      NumberOfAZs:
+        default: Number of Availability Zones
       BootDiskSize:
         default: Boot Disk Capacity (GiB)
-      EventBrokerNodeInstanceType:
-        default: Instance Type
+      MaxClientConnections:
+        default: Maximum Number of Client Connections
+      MaxQueueMessages:
+        default: Maximum Number of Queue Messages
+      WorkerNodeInstanceType:
+        default: Message Routing Node Instance Type
       EventBrokerNodeStorage:
         default: Persistent Storage
       MonitorNodeInstanceType:
-        default: Instance Type
+        default: Monitor Node Instance Type
       KeyPairName:
         default: Key Pair Name
-      NumberOfAZs:
-        default: Number of Availability Zones to use
       RemoteAccessCIDR:
         default: Allowed External Access CIDR
       SSHSecurityGroupID:
@@ -86,7 +89,8 @@ Parameters:
     Default: solace/solace-pubsub-standard:latest
     Type: String
   AdminPassword:
-    Description: Required password to access Solace admin console and SEMP
+    Description: Password to allow Solace admin access to configure the event broker
+      instances
     Type: String
     NoEcho: 'True'
   ContainerLoggingFormat:
@@ -106,15 +110,33 @@ Parameters:
     MaxValue: '128'
     MinValue: '8'
     Type: Number
-  EventBrokerNodeInstanceType:
+  MaxClientConnections:
+    AllowedValues:
+      - '100'
+      - '1000'
+      - '10000'
+      - '100000'
+      - '200000'
+    ConstraintDescription: Must be a valid value from the list.
+    Default: '100'
+    Description: 'The maximum supported number of client connections system scaling parameter'
+    Type: String
+  MaxQueueMessages:
+    AllowedValues:
+      - '100'
+      - '240'
+      - '3000'
+    ConstraintDescription: Must be a valid EC2 instance type.
+    Default: '100'
+    Description: 'The maximum number of queue messages system scaling parameter, in millions of messages'
+    Type: String
+  WorkerNodeInstanceType:
     AllowedValues:
       - t2.small
       - t2.medium
       - t2.large
       - t2.xlarge
       - t2.2xlarge
-      - m3.large
-      - m3.xlarge
       - m4.large
       - m4.xlarge
       - m4.2xlarge
@@ -125,8 +147,9 @@ Parameters:
       - m5.4xlarge
     ConstraintDescription: Must be a valid EC2 instance type.
     Default: m4.large
-    Description: 'Instance Type for PubSub+ event broker message routing nodes. Note:
-      Make sure that your region supports the selected instance type before continuing'
+    Description: 'Instance Type for PubSub+ event broker message routing nodes. Important: Ensure adequate CPU and Memory resources 
+      are available to support the selected system scaling parameters. For requirements check https://docs.solace.com/. 
+      Also make sure that your region supports the selected instance type before continuing.'
     Type: String
   EventBrokerNodeStorage:
     ConstraintDescription: No more than 640 GiB per device.
@@ -143,24 +166,33 @@ Parameters:
       - '320'
       - '640'
     Type: Number
-  MonitorNodeInstanceType:
-    AllowedValues:
-      - t2.micro
-      - t2.small
-      - t2.medium
-      - t2.large
-      - t2.xlarge
-      - m4.large
-      - m5.large
-    ConstraintDescription: Must be a valid EC2 instance type.
-    Default: t2.micro
-    Description: 'Instance Type for PubSub+ event broker monitoring node. Note: Make
-      sure that your region supports the selected instance type before continuing'
-    Type: String
   KeyPairName:
     Description: Name of an existing EC2 key pair within the AWS region; all instances
       will launch with this key pair
     Type: AWS::EC2::KeyPair::KeyName
+  UsePrivateSubnets:
+    AllowedValues:
+      - 'true'
+      - 'false'
+    Default: 'true'
+    Description: Whether to use Private Subnets with fronting Bastion Servers
+    Type: String
+  RemoteAccessCIDR:
+    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
+    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/x
+    Description: Allowed CIDR block for external access to cluster nodes
+    Type: String
+  MonitorNodeInstanceType:
+    AllowedValues:
+      - t2.small
+      - t2.medium
+      - m4.large
+      - m5.large
+    ConstraintDescription: Must be a valid EC2 instance type.
+    Default: t2.medium
+    Description: 'Instance Type for PubSub+ event broker monitoring node. For requirements check https://docs.solace.com/. Note: Make
+      sure that your region supports the selected instance type before continuing'
+    Type: String
   NumberOfAZs:
     ConstraintDescription: Valid numbers are 3 or 2
     Default: '3'
@@ -170,21 +202,9 @@ Parameters:
       - '2'
       - '3'
     Type: Number
-  RemoteAccessCIDR:
-    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
-    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/x
-    Description: Allowed CIDR block for external access to cluster nodes
-    Type: String
   SSHSecurityGroupID:
     Description: 'ID of the SSH Security Group (e.g., sg-7f16e910).  Note: This will
       be ignored if ''Use private subnets'' is set to ''false'''
-    Type: String
-  UsePrivateSubnets:
-    AllowedValues:
-      - 'true'
-      - 'false'
-    Default: 'true'
-    Description: Whether to use Private Subnets with fronting Bastion Servers
     Type: String
   PrivateSubnetIDs:
     Description: >-
@@ -252,7 +272,9 @@ Resources:
         ClusterInfoHandle: !Ref 'ClusterInfoHandle'
         KeyPairName: !Ref 'KeyPairName'
         NodeDesignation: event-broker-primary
-        NodeInstanceType: !Ref 'EventBrokerNodeInstanceType'
+        MaxClientConnections: !Ref 'MaxClientConnections'
+        MaxQueueMessages: !Ref 'MaxQueueMessages'
+        NodeInstanceType: !Ref 'WorkerNodeInstanceType'
         NodeSecurityGroup: !Join
           - ','
           - - !Ref 'EventBrokerSecurityGroup'
@@ -286,7 +308,9 @@ Resources:
         ClusterInfoHandle: !Ref 'ClusterInfoHandle'
         KeyPairName: !Ref 'KeyPairName'
         NodeDesignation: event-broker-backup
-        NodeInstanceType: !Ref 'EventBrokerNodeInstanceType'
+        MaxClientConnections: !Ref 'MaxClientConnections'
+        MaxQueueMessages: !Ref 'MaxQueueMessages'
+        NodeInstanceType: !Ref 'WorkerNodeInstanceType'
         NodeSecurityGroup: !Join
           - ','
           - - !Ref 'EventBrokerSecurityGroup'
