--- a/templates/nodecreate.template
+++ b/templates/nodecreate.template
@@ -42,6 +42,26 @@ Parameters:
     Default: 'event-broker-singlenode'
     Description: Purpose of the deployed instance. Will create a single-node non-HA deployment if set to default "event-broker-singlenode".
     Type: String
+  MaxClientConnections:
+    AllowedValues:
+      - '100'
+      - '1000'
+      - '10000'
+      - '100000'
+      - '200000'
+    ConstraintDescription: Must be a valid value from the list.
+    Default: '100'
+    Description: 'The maximum supported number of client connections system scaling parameter'
+    Type: String
+  MaxQueueMessages:
+    AllowedValues:
+      - '100'
+      - '240'
+      - '3000'
+    ConstraintDescription: Must be a valid EC2 instance type.
+    Default: '100'
+    Description: 'The maximum number of queue messages system scaling parameter, in millions of messages'
+    Type: String
   NodeInstanceType:
     ConstraintDescription: Must be a valid EC2 instance type.
     Default: m4.large
@@ -506,6 +526,10 @@ Resources:
                   - '  -g '
                   - !Ref 'CloudFormationLogs'
                   - '  -r ${instance_id}/solace.log'
+                  - '  -n '
+                  - !Ref 'MaxClientConnections'
+                  - '  -q '
+                  - !Ref 'MaxQueueMessages'
                   - "\n"
           - !Base64 # Full setup for HA deployment
               Fn::Join:
@@ -569,6 +593,10 @@ Resources:
                   - '  -g '
                   - !Ref 'CloudFormationLogs'
                   - '  -r ${instance_id}/solace.log'
+                  - '  -n '
+                  - !Ref 'MaxClientConnections'
+                  - '  -q '
+                  - !Ref 'MaxQueueMessages'
                   - " \n"
                   - "## Signal back information for outputs (now that all nodes are up)\
                     \ \n"
