--- a/templates/solace.template
+++ b/templates/solace.template
@@ -31,7 +31,7 @@ Metadata:
           - MaxClientConnections
           - MaxQueueMessages
           - WorkerNodeInstanceType
-          - EventBrokerNodeStorage
+          - WorkerNodeStorage
           - MonitorNodeInstanceType
       - Label:
           default: AWS Quick Start Configuration
@@ -56,7 +56,7 @@ Metadata:
         default: Maximum Number of Queue Messages
       WorkerNodeInstanceType:
         default: Message Routing Node Instance Type
-      EventBrokerNodeStorage:
+      WorkerNodeStorage:
         default: Persistent Storage
       MonitorNodeInstanceType:
         default: Monitor Node Instance Type
@@ -151,7 +151,7 @@ Parameters:
       are available to support the selected system scaling parameters. For requirements check https://docs.solace.com/. 
       Also make sure that your region supports the selected instance type before continuing.'
     Type: String
-  EventBrokerNodeStorage:
+  WorkerNodeStorage:
     ConstraintDescription: No more than 640 GiB per device.
     Default: '0'
     Description: Allocated EBS storage for each block device (in GiB); 0 indicates
@@ -282,7 +282,7 @@ Resources:
             - !Ref 'BrokerMemberNodesSecurityGroup'
             - !Ref 'RemoteMgmtSecurityGroup'
         ParentStackName: !Ref 'AWS::StackName'
-        PersistentStorage: !Ref 'EventBrokerNodeStorage'
+        PersistentStorage: !Ref 'WorkerNodeStorage'
         QSS3BucketName: !Ref 'QSS3BucketName'
         QSS3BucketRegion: !Ref 'QSS3BucketRegion'
         QSS3KeyPrefix: !Ref 'QSS3KeyPrefix'
@@ -318,7 +318,7 @@ Resources:
             - !Ref 'BrokerMemberNodesSecurityGroup'
             - !Ref 'RemoteMgmtSecurityGroup'
         ParentStackName: !Ref 'AWS::StackName'
-        PersistentStorage: !Ref 'EventBrokerNodeStorage'
+        PersistentStorage: !Ref 'WorkerNodeStorage'
         QSS3BucketName: !Ref 'QSS3BucketName'
         QSS3BucketRegion: !Ref 'QSS3BucketRegion'
         QSS3KeyPrefix: !Ref 'QSS3KeyPrefix'
