--- a/templates/solace.template
+++ b/templates/solace.template
@@ -5,10 +5,15 @@ Metadata:
   AWS::CloudFormation::Interface:
     ParameterGroups:
       - Label:
-          default: PubSub+ Broker Configuration
+          default: PubSub+ Event Broker Configuration
         Parameters:
           - SolaceDockerImage
           - AdminPassword
+          - MaxClientConnections
+          - MaxQueueMessages
+          - WorkerNodeInstanceType
+          - WorkerNodeStorage
+          - MonitorNodeInstanceType
           - ContainerLoggingFormat
       - Label:
           default: Network Configuration
@@ -25,14 +30,6 @@ Metadata:
         Parameters:
           - KeyPairName
           - BootDiskSize
-      - Label:
-          default: Event Broker System Scaling
-        Parameters:
-          - MaxClientConnections
-          - MaxQueueMessages
-          - WorkerNodeInstanceType
-          - WorkerNodeStorage
-          - MonitorNodeInstanceType
       - Label:
           default: AWS Quick Start Configuration
         Parameters:
@@ -83,9 +80,9 @@ Metadata:
 Parameters:
   SolaceDockerImage:
     Description: >-
-      Solace PubSub+ event broker docker image reference: a docker registry name
+      Solace PubSub+ event broker Docker image reference: a Docker registry name
       with optional tag or a download URL. The download URL can be obtained from http://dev.solace.com/downloads/
-      or it can be a url to a remotely hosted load version
+      or it can be a url to an image in a registry or a url to a tar.gz image on a web server
     Default: solace/solace-pubsub-standard:latest
     Type: String
   AdminPassword:
@@ -103,6 +100,15 @@ Parameters:
     Default: graylog
     Description: PubSub+ event broker logging format in CloudWatch
     Type: String
+  NumberOfAZs:
+    ConstraintDescription: Valid numbers are 3 or 2
+    Default: '3'
+    Description: Number of availability zones, based on availability in the target region, valid numbers are 3 or 2. 3 means each node in own AZ, 2 puts monitor and backup
+      in one AZ.
+    AllowedValues:
+      - '2'
+      - '3'
+    Type: Number
   BootDiskSize:
     ConstraintDescription: Deployment supports 8 to 128 GB for boot volumes
     Default: '24'
@@ -147,7 +153,7 @@ Parameters:
       - m5.4xlarge
     ConstraintDescription: Must be a valid EC2 instance type.
     Default: m4.large
-    Description: 'Instance Type for PubSub+ event broker message routing nodes. Important: Ensure adequate CPU and Memory resources 
+    Description: 'Instance Type for PubSub+ event broker message routing nodes. Important: ensure adequate CPU and Memory resources
       are available to support the selected system scaling parameters. For requirements check https://docs.solace.com/. 
       Also make sure that your region supports the selected instance type before continuing.'
     Type: String
@@ -193,15 +199,6 @@ Parameters:
     Description: 'Instance Type for PubSub+ event broker monitoring node. For requirements check https://docs.solace.com/. Note: Make
       sure that your region supports the selected instance type before continuing'
     Type: String
-  NumberOfAZs:
-    ConstraintDescription: Valid numbers are 3 or 2
-    Default: '3'
-    Description: Number of availability zones, based on availability in the target region, valid numbers are 3 or 2. 3 means each node in own AZ, 2 puts monitor and backup
-      in one AZ.
-    AllowedValues:
-      - '2'
-      - '3'
-    Type: Number
   SSHSecurityGroupID:
     Description: 'ID of the SSH Security Group (e.g., sg-7f16e910).  Note: This will
       be ignored if ''Use private subnets'' is set to ''false'''
