Testing rolename fix

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ git:
 
 env:
   global:
-  - AWS_DEFAULT_REGION=eu-west-2
+  - AWS_DEFAULT_REGION=eu-west-1
   - MESSAGEBROKERNODEINSTANCETYPE=t2.small
   
 before_install:
@@ -60,6 +60,9 @@ script:
     | grep "<oper-status>Up</oper-status>"` ]] ; then echo "config-sync not up!"; exit
     1; fi'
   - pubSubTools/sdkperf_c -cip=$url -mn=100000 -mr=0 -ptl=t1 -stl=t1 | grep "Total Messages"
+  - ##########################################
+  - exit
+  - ##########################################
   - aws cloudformation delete-stack --stack-name $TESTSTACKNAME
   - echo "Waiting for stack delete complete"
   - stackid="$(aws cloudformation describe-stacks --stack-name $TESTSTACKNAME | grep StackId | awk -F '"' '{print $4}')"
